# Chatbot-nltk-keras

./: README.md  pyproject.toml
src/chatbot_nltk_keras/: __init__.py  chatbot.py  config.py  model.py  preprocessing.py  train.py
src/chatbot_nltk_keras/data/: intents.json
tests/: test_preprocessing.py
